# 8086-Emulator

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  flowcharts.md  syntax.md  syntax_old.md
.github/workflows/: main.yaml
examples/: addition.s  data_transfer.s  factorial.s  hello_world.s  int.s  interrupt.s  lcm_gcd.s  macro.s  min_max.s  sort.s
src/: bin.rs
src/driver/: driver.rs  error_helper.rs  interrupts.rs  mod.rs  preprocess.rs  print.lalrpop  print.rs  user_interface.rs
src/lib/: arch.rs  lib.rs  vm.rs
src/lib/data_parser/: data_parser.lalrpop  data_parser.rs  data_parser_tests.rs  mod.rs
src/lib/instructions/: arithmetic.rs  bit_manipulation.rs  control.rs  data_transfer.rs  mod.rs  string.rs  transfer.rs
src/lib/interpreter/: interpreter.lalrpop  interpreter.rs  interpreter_tests.rs  mod.rs
src/lib/interpreter/tests/: arithmetic.rs  bit_manipulation.rs  control.rs  data_transfer.rs  mod.rs  print.rs  string.rs  transfer.rs
src/lib/parser/: asm.rs  ir.rs  lexer.rs  lexer_tests.rs  mod.rs  parser.rs  parser_tests.rs
src/lib/preprocessor/: lexer_helper.rs  mod.rs  preprocessor.lalrpop  preprocessor.rs  preprocessor_tests.rs
src/lib/util/: address.rs  data_util.rs  flag_util.rs  interpreter_util.rs  mod.rs  preprocessor_util.rs
